# AtmosphericEngine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  DEVLOG.md  LICENSE  LICENSE.md  README.md  RMLUI_INTEGRATION.md  build.sh  camera.hpp  cube.hpp  gl.cpp  justfile  main.cpp  moneybro.hpp  shader.hpp  terrain.hpp  triforce.hpp  vcpkg.json
AtmosphericEngine/: Application.cpp  Application.hpp  Atmospheric.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Collider.hpp  ComponentFactory.cpp  Console.cpp  Console.hpp  ECSServer.cpp  GUI.cpp  GUI.hpp  GUIDocument.hpp  GUIWindow.cpp  Globals.hpp  GraphicsServer.cpp  GraphicsServer.hpp  IL.cpp  Impostor.cpp  Impostor.hpp  Input.cpp  Input.hpp  Mesh.cpp  MeshCollection.hpp  MessageBus.cpp  Model.hpp  Renderable.cpp  Renderable.hpp  RuntimeConfig.hpp  Script.cpp  Script.hpp  Server.cpp  Server.hpp  ShapeCollection.hpp  Window.cpp  Window.hpp  application.cpp  application.hpp  asset_manager.cpp  (+71 more)
AtmosphericEngine/Utility/: file.hpp
AtmosphericEngine/default_assets/shaders/: Particle.frag  Particle.vert  ParticleSim.vert  bloom.vert  bloom_composite.frag  bloom_downsample.frag  bloom_threshold.frag  bloom_upsample.frag  canvas.frag  canvas.vert  debug.vert  depth_simple.vert  fx_blur.wgsl  fx_glow.wgsl  hdr.frag  hdr_ca.frag  lighting.frag  lighting.vert  lighting_2d.frag  lighting_2d.vert  lighting_2d.wgsl  noop.frag  pbr.frag  quad_2d.wgsl  simple.vert  skybox.frag  skybox.vert  sun.frag  sun.vert  tbn.vert  voxel.frag  voxel.vert  water.frag  water.vert
AtmosphericEngine/default_assets/textures/: default_ao.ktx2  default_norm.ktx2  default_rough.ktx2
AtmosphericEngine/include/: Atmospheric.hpp
AtmosphericEngine/include/Atmospheric/: action.hpp  action_manager.hpp  animator_2d.hpp  application.hpp  asset_manager.hpp  audio_manager.hpp  batch_renderer_2d.hpp  buffer.hpp  bullet_collision.hpp  camera_component.hpp  canvas_drawable.hpp  command_encoder.hpp  component.hpp  component_registry.hpp  config.hpp  console.hpp  csb_loader.hpp  csg.hpp  drawable_2d.hpp  editor_layer.hpp  file_system.hpp  font_manager.hpp  frustum.hpp  game_layer.hpp  game_object.hpp  gfx_factory.hpp  layer.hpp  (+55 more)
AtmosphericEngine/schemas/: Scene.fbs
AtmosphericEngine/src/: action.cpp  application.cpp  asset_manager.cpp  audio_manager.cpp  audio_manager.hpp  batch_renderer_2d.cpp  bullet_task_scheduler.cpp  bullet_task_scheduler.hpp  camera_component.cpp  component_registry.cpp  console.cpp  csb_loader.cpp  csg.cpp  editor_layer.cpp  file_system.cpp  font_manager.cpp  frustum.cpp  game_layer.cpp  game_object.cpp  gfx_factory.cpp  gl_buffer.cpp  gl_render_target.cpp  gpu_buffer.cpp  gpu_canvas_pass.cpp  gpu_render_target.cpp  graphics_server.cpp  graphics_server_tile.cpp  job_system.cpp  job_system.hpp  light_component.cpp  lighting_2d.cpp  mesh.cpp  mesh_builder.cpp  mesh_component.cpp  messagable.hpp  message.hpp  message_bus.cpp  particle_emitter.cpp  particle_server.cpp  pch.hpp  (+38 more)
AtmosphericEngine/utility/: file.cpp  file.hpp
Example_CSB/: CMakeLists.txt  main.cpp
Example_HelloWorld/: CMakeLists.txt  main.cpp
Example_MazeWorld/: CMakeLists.txt  main.cpp
Example_MazeWorld/assets/: main.lua
Example_MidnightSkyraiders/: CMakeLists.txt  main.cpp
Example_NoitaLike/: CMakeLists.txt  README.md  game_sim.cpp  game_sim.hpp  main.cpp  net_lockstep.cpp  net_lockstep.hpp  sand_world.cpp  sand_world.hpp
Example_Physics2D/: CMakeLists.txt  main.cpp
Example_RPG/: CMakeLists.txt  main.cpp  rpg_entity.hpp  rpg_game.cpp  rpg_game.hpp
Example_VoxelWorld/: CMakeLists.txt  main.cpp
frontends/lua/: CMakeLists.txt  example_main.lua  font_manager.cpp  font_manager.hpp  lua_application.cpp  lua_application.hpp  main.cpp  scriptable_component.cpp  scriptable_component.hpp
src/: Application.cpp  Application.hpp  Atmospheric.cpp  BulletDebugDraw.hpp  BulletMain.h  CMakeLists.txt  Camera.hpp  Common.hpp  ComponentFactory.hpp  DebugDrawer.cpp  DefaultMeshCollection.hpp  DefaultShapeCollection.hpp  Entity.cpp  Entity.hpp  GUIDocument.cpp  GUIElement.cpp  GUIElement.hpp  GUIState.cpp  GUIState.hpp  GUIWindow.hpp  GameObject.cpp  Globals.hpp  GraphicsServer.cpp  GraphicsServer.hpp  ImGui.hpp  ImguiFx.hpp  Impostor.hpp  Mesh.cpp  Mesh.hpp  MessageBus.hpp  Model.cpp  Model.hpp  PhysicsServer.cpp  PhysicsServer.hpp  Runtime.cpp  Runtime.hpp  Script.cpp  Script.hpp  Server.cpp  action.cpp  (+51 more)
src/Components/: CMakeLists.txt  Camera.cpp  ComponentFactory.cpp  GameObject.cpp  Impostor.cpp  Mesh.cpp  light.cpp
src/Console/: CMakeLists.txt  Console.cpp
src/ECS/: CMakeLists.txt  Component.cpp  ECSServer.cpp  Entity.cpp
src/Framework/: Application.cpp  CMakeLists.txt  Framework.cpp  Server.cpp  Window.cpp
src/GUI/: CMakeLists.txt  GUI.cpp  GUIDocument.cpp  GUIElement.cpp  GUIState.cpp  GUIWindow.cpp
src/Input/: CMakeLists.txt  Input.cpp
src/Messaging/: CMakeLists.txt  Messagable.cpp  Message.cpp  MessageBus.cpp
src/OS/: CMakeLists.txt  file.cpp
src/System/: CMakeLists.txt  file.cpp
src/Window/: CMakeLists.txt  Framework.cpp
src/engine/: Engine.hpp  camera.cpp  camera.hpp  component.hpp  cube.cpp  cube.hpp  entity.cpp  frustum.hpp  game.cpp  game.hpp  geometry.cpp  geometry.hpp  instantiation.cpp  instantiation.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  program.cpp  program.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  sphere.cpp  sphere.hpp  system.hpp  terrain.cpp  terrain.hpp  texture.cpp
src/graphics/: CMakeLists.txt  Framework.cpp  Framework.hpp  GUI.cpp  GraphicsServer.cpp  Model.cpp  camera.cpp  entity.cpp  frustum.cpp  light.cpp  material.cpp  mesh.cpp  program.cpp  renderer.cpp  renderer.hpp  scene.cpp  shader.cpp  texture.cpp
src/io/: file.cpp  file.hpp
src/physics/: BulletDebugDraw.cpp  BulletDebugDraw.hpp  BulletMain.cpp  BulletMain.h  BulletMinimal.h  CMakeLists.txt  DebugDrawer.cpp  Debugger.cpp  Debugger.hpp  DynamicsWorld.cpp  PhysicsServer.cpp  PhysicsWorld.cpp  PhysicsWorld.h  World.cpp
src/scripting/: CMakeLists.txt  IL.cpp  Script.cpp  lua.cpp  lua.hpp
(+219 files in other folders)
